--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
+@charset "UTF-8";
 body {
   margin: 0px;
   padding: 0px;
   background-color: #F8F8F8;
   font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
 }
 
 nav {
@@ -74,8 +76,448 @@ nav .icons .login-icon {
   }
 }
 
+.primary-enabled-button {
+  display: flex;
+  padding: 6px 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: var(--Spacing-2, 8px);
+  border: 1px solid var(--Color-Blue-Blue-5, #6887D8);
+  background: var(--Color-button-background-primary, #A4B7E8);
+}
+
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background: #F8F8F8;
+  position: relative;
+}
+.hero-section .hero-background-image {
+  width: 300px;
+  height: 94px;
+  position: absolute;
+  left: 20.5px;
+  top: 98px;
+  z-index: -1;
+}
+.hero-section .hero-content .hero-texts-button {
+  align-items: flex-start;
+  align-self: stretch;
+  position: relative;
+  z-index: 2;
+  height: 246px;
+  padding-top: 54px;
+  padding-left: 12px;
+}
+.hero-section .hero-content .hero-texts-button .hero-text {
+  color: #1F1F1D;
+  font-size: 13.33px;
+  font-weight: 700;
+  line-height: 120%;
+  margin-right: 0;
+  text-align: left;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+}
+.hero-section .hero-content .hero-texts-button .hero-title {
+  color: #546eb1;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 140%;
+  margin-right: 0;
+  text-align: left;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  letter-spacing: 1.44px;
+  flex: 1 0 0;
+  padding-bottom: 30px;
+}
+.hero-section .hero-content .hero-carousel {
+  width: 100%;
+  background: #F2E6DE;
+  margin-top: 32px;
+  padding: 16px 0;
+  overflow: hidden; /* Oculta las imágenes que están fuera del contenedor */
+  width: 100%; /* Asegura que el contenedor ocupa el 100% del ancho disponible */
+  height: 312px; /* Ajusta la altura según sea necesario */
+  position: relative;
+}
+.hero-section .hero-content .hero-carousel .carousel-wrapper {
+  display: flex; /* Coloca las imágenes en una fila horizontal */
+  transition: transform 1s ease-in-out; /* Efecto suave para el cambio de imagen */
+  width: 100%; /* 100% por cada imagen, ajusta según el número de imágenes */
+  left: 0;
+}
+.hero-section .hero-content .hero-carousel .carousel-wrapper img {
+  width: 100vw; /* Cada imagen ocupa el 100% del ancho del contenedor del carrusel */
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.features-section {
+  font-family: "Montserrat", sans-serif;
+  background: url("../assets/svg/features-background.svg") no-repeat center center;
+  background-size: cover;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 457px;
+  gap: 10px;
+  align-items: center;
+}
+.features-section .feature {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 7px 34px;
+  height: 76px;
+}
+.features-section .feature .feature-image {
+  width: 62px;
+  height: 62px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 38px; /* Espacio entre la imagen y el texto */
+}
+.features-section .feature .feature-image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.features-section .feature .feature-text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.features-section .feature .feature-text h3 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+.features-section .feature .feature-text p {
+  color: #1F1F1D;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.2;
+  margin-right: 38px;
+  text-align: left;
+  font-family: "Montserrat", sans-serif;
+}
+
 footer {
   background-color: #4E4D49;
   width: 100%;
   height: 250px;
+}
+
+@media (min-width: 1024px) and (max-width: 1280px) {
+  nav .logo {
+    justify-content: left;
+  }
+  .hero-section {
+    width: 100%;
+    flex-shrink: 0;
+    position: relative;
+  }
+  .hero-section .hero-background-image {
+    width: 362px;
+    height: 105px;
+    position: absolute;
+    left: 110.5px;
+    top: 119px;
+    z-index: -1;
+  }
+  .hero-section .hero-content {
+    width: 100%;
+    height: 815px;
+    position: relative;
+    z-index: 2;
+  }
+  .hero-section .hero-content .hero-texts-button {
+    padding-top: 50px;
+    padding-left: 90px;
+    display: flex;
+    width: 563px;
+    height: 300px;
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: stretch;
+    flex-shrink: 0;
+  }
+  .hero-section .hero-content .hero-texts-button .hero-text {
+    color: #1F1F1D;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 120%;
+    margin-right: 0;
+    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+  }
+  .hero-section .hero-content .hero-texts-button .hero-title {
+    color: #546eb1;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 140%;
+    margin-right: 0;
+    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    letter-spacing: 1.44px;
+    flex: 1 0 0;
+  }
+  .hero-section .hero-content .hero-carousel {
+    width: 594px;
+    height: 424px;
+    position: absolute;
+    right: 87px;
+    top: 330px;
+    background: #FFF;
+    display: flex;
+    margin: 0;
+    padding: 12px;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    overflow: hidden;
+    box-shadow: 0 0 0 12px #FFF; /* Ajusta el tamaño del marco según sea necesario */
+  }
+  .hero-section .hero-content .hero-carousel img {
+    width: 570px;
+    height: 400px;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero-section .hero-content .hero-carousel .carousel-wrapper {
+    display: flex;
+    width: 600%;
+    height: 100%;
+    transition: transform 1s ease-in-out;
+  }
+  .hero-section .hero-content .hero-carousel .carousel-wrapper img {
+    width: 600%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .hero-section .hero-content {
+    position: relative;
+  }
+  .hero-section .hero-content::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 170px;
+    background-color: #F2E6DE;
+    z-index: 1;
+  }
+  .primary-enabled-button {
+    display: flex;
+    height: 40px;
+    padding: 12px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: var(--Spacing-2, 8px);
+    border: 1px solid var(--Color-Blue-Blue-8, #2D3B62);
+    background: var(--Color-button-background-primary, #A4B7E8);
+    color: #1F1F1D;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 120%;
+    margin-right: 0;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+  }
+  .features-section {
+    display: grid;
+    grid-template-columns: repeat(2, 240px);
+    -moz-column-gap: 112px;
+         column-gap: 112px;
+    justify-content: center;
+  }
+  .features-section .feature {
+    flex: 0 0 62px;
+    width: 240px;
+    height: 170px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    justify-content: center;
+  }
+  .features-section .feature .feature-image {
+    margin: 0 0 20px 0;
+  }
+  .features-section .feature .feature-text {
+    text-align: center;
+    align-items: center;
+  }
+  .features-section .feature .feature-text h3 {
+    font-size: 13.33px;
+    font-weight: 700;
+    line-height: 120%;
+  }
+  .features-section .feature .feature-text p {
+    color: #1F1F1D;
+    font-size: 13.33px;
+    font-weight: 400;
+    line-height: 120%;
+    margin-right: 0;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+  }
+}
+@media (min-width: 1280px) {
+  nav .logo {
+    justify-content: left;
+  }
+  .hero-section {
+    width: 100%;
+    height: 698px;
+    background: url("../assets/svg/Hero_desk_background.PNG") no-repeat center center;
+    background-size: 100% 698px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  .hero-section .hero-background-image {
+    width: 450px;
+    height: 124px;
+    position: absolute;
+    left: 30.5px;
+    top: 136px;
+    z-index: -1;
+  }
+  .hero-section .hero-content {
+    display: inline-flex;
+    align-items: center;
+    gap: 87px;
+    height: 424px;
+  }
+  .hero-section .hero-content .hero-texts-button {
+    display: flex;
+    width: 563px;
+    height: 350px;
+    flex-direction: column;
+    align-items: flex-start;
+    right: 4px;
+    order: 2;
+  }
+  .hero-section .hero-content .hero-texts-button .hero-text {
+    color: #1F1F1D;
+    font-size: 19.2px;
+    font-weight: 700;
+    line-height: 120%;
+    margin-right: 0;
+    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+  }
+  .hero-section .hero-content .hero-texts-button .hero-title {
+    color: #546eb1;
+    font-size: 56px;
+    font-weight: 400;
+    line-height: 140%;
+    margin-right: 0;
+    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    letter-spacing: 2.24px;
+    flex: 1 0 0;
+  }
+  .hero-section .hero-content .hero-carousel {
+    width: 594px;
+    height: 424px;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    background: #FFF;
+    align-items: center;
+    justify-content: center;
+    order: 1;
+    overflow: hidden;
+    box-shadow: 0 0 0 18px #FFF; /* Ajusta el tamaño del marco según sea necesario */
+  }
+  .hero-section .hero-content .hero-carousel img {
+    display: flex;
+    width: 570px;
+    height: 400.5px;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero-section .hero-content .hero-carousel .carousel-wrapper {
+    display: flex;
+    width: 600%;
+    height: 100%;
+    transition: transform 1s ease-in-out;
+  }
+  .hero-section .hero-content .hero-carousel .carousel-wrapper img {
+    width: 600%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .primary-enabled-button {
+    display: flex;
+    height: 43px;
+    padding: 12px 72px;
+    border: 1px solid var(--Color-Blue-Blue-8, #2D3B62);
+    background: var(--Color-button-background-primary, #A4B7E8);
+    gap: 10px;
+    color: #1F1F1D;
+    font-size: 19.2px;
+    font-weight: 500;
+    line-height: 120%;
+    margin-right: 0;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+  }
+  .features-section {
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+  }
+  .features-section .feature {
+    width: 265x;
+    height: auto;
+    flex-direction: column;
+  }
+  .features-section .feature .feature-image {
+    margin-bottom: 20px;
+    width: 98px;
+    height: 98px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 0; /* Espacio entre la imagen y el texto */
+  }
+  .features-section .feature .feature-text {
+    text-align: center;
+    align-items: center;
+  }
+  .features-section .feature .feature-text h3 {
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+  }
+  .features-section .feature .feature-text p {
+    color: #1F1F1D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 120%;
+    margin-right: 0;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+  }
 }/*# sourceMappingURL=main.css.map */
